package domotique;

/**
 * interface pour abstraire la notion d'appareil
 *
 */
public interface Appareil {

    /**
     * permet d'allumer un appareil
     */
    public void allumer();

    /**
     * permet d'eteindre un appareil
     */
    public void eteindre();

}

