@startuml

package domotique {

class Telecommande {

    + Telecommande()
    + ajouterLampe(nouvelleLampe : Lampe)
    + ajouterHifi(nouvelleHifi : Hifi)
    + activerLampe(indiceLampe : int)
    + activerHifi(indiceHifi : int)
    + desactiverLampe(indiceLampe : int)
    + desactiverHifi(indiceHifi : int)
    + activerTout()
    + getLampe(indiceLampe : int) : Lampe
    + getHifi(indiceHifi : int) : Hifi
    + toString() : String
}

interface Appareil { 
    + allumer()
    + eteindre()
    + toString() : String
}

class Lampe {
    - nom : String
    - allume : boolean

    + Lampe(paramNom : String)
    + allumer()
    + eteindre()
    + isAllume() : boolean
    + toString() : String
}

class Hifi {
    - son : int

    + allumer()
    + eteindre()
    + toString() : String
}

class Cheminee {

    - intensite : int 
    
    + Cheminee()
    + changerIntensite(intensite : int) 
    + getIntensite() : int
    + toString() : String

}

class AdapterCheminee {

    + AdapterCheminee()
    + allumer()
    + eteindre()
    + toString() : String
}

class AdapterThermostat {
    
    + AdapterThermostat()
    + allumer()
    + eteindre()
    + toString() : String
}

}

package thermos {

class Thermostat {

    - temperature : int
    
    + Thermostat()
    + paint(g : Graphics)
    + monterTemperature()
    + baisserTemperature()
    + getTemperature() : int
    + toString() : String
    

}

' Relations
Telecommande " 1 " ---> " * " Appareil : - appareils
Cheminee " 1 " <--- " 1 " AdapterCheminee : -chemineeAadapter
Thermostat " 1 " <--- " 1 " AdapterThermostat : -thermosAadapter

Lampe ..|> Appareil
Hifi ..|> Appareil
AdapterCheminee ..|> Appareil
AdapterThermostat ..|> Appareil


@enduml